Added sections and media

--- a/index.html
+++ b/index.html
@@ -6,6 +6,51 @@
     <title>HTML Mastery with Git</title>
 </head>
 <body>
-    
+    <header>Activity 3 - HTML Mastery with Git</header>
+    <nav>
+        <div><a href="#home">Home</a></div>
+        <div><a href="#about">About</a></div>
+        <div><a href="#contact">Contact</a></div>
+    </nav>
+    <hr>
+    <main>
+        <!-- Short Blog Post about Cats for article section -->
+        <article>
+            <h2>10 Facts About Orange Cats!</h2>
+            <p>A lot of people adore orange cats for their captivating personalities and appealing appearance. Let's delve into some fascinating facts about these fantastic felines!</p>
+            <ol>
+                <li>Orange cats are not a breed of their own</li>
+                <li>Orange cats are not a solid color</li>
+                <li>Most orange cats are marked with an ‘M’</li>
+                <li>Orange male cats outnumber female cats</li>
+                <li>The orange color is due to a pigment found in red-haired people too</li>
+                <li>Orange cats can have short or long hair</li>
+                <li>There are lots of orange celebrity cats!</li>
+                <li>They tend to develop black freckles</li>
+                <li>Orange cats can have a variety of eye colors</li>
+                <li>Their color inspires a variety of names</li>
+            </ol>
+            <p><strong>Source: </strong> <a href="https://thevets.com/blog/orange-cats/" target="_blank"><i>The Vets</i></a></p>
+        </article>
+        <hr>
+
+        <!-- HOME SECTION -->
+        <section id="home">
+            <h2>Cats' World ^_^</h2>
+            <p>Welcome to Cats World, your ultimate destination for all things feline! Dive into a world where whiskers whisk magic and purrs resonate with joy. Whether you're a seasoned cat enthusiast or just beginning to explore the wonders of these magnificent creatures, our platform is here to delight and inform. From adorable kitten tales to expert care tips, embark on a journey of discovery alongside the most enchanting companions on earth. Join us as we celebrate the elegance, intelligence, and charm of our beloved whiskered friends. Welcome to the purr-fect world of Cats World!</p>
+        </section>
+        <hr>
+
+        <!-- ABOUT SECTION -->
+        <section id="about">
+            <h2>About Us</h2>
+            <img width="800" height="315" src="https://www.purina.co.uk/sites/default/files/2023-03/Hero%20Pedigree%20Cats.jpg" alt="Cats">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hUqoT9DjSa8?si=8itpgsDnA5KvBJJD" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <p>Our passion for felines knows no bounds! Founded in 2024, we are a team of devoted cat lovers on a mission to celebrate and share the joys of cat ownership with the world.</p>
+            <p>At Cats World, we believe that every whisker tells a story, and every purr is a melody of happiness. Whether you're a seasoned cat guardian or considering adding a furry friend to your family, we're here to provide you with the resources, knowledge, and inspiration you need to make the most of your feline companionship.</p>
+            <p>From expert tips on cat care and behavior to heartwarming stories that highlight the unique bond between cats and their humans, our platform offers a wealth of information and entertainment for cat enthusiasts of all ages.</p>
+            <p>Join us as we explore the fascinating world of cats together and celebrate the magic they bring into our lives each and every day. Thank you for being a part of the Cats World community!</p>
+        </section>
+        <hr>
 </body>
 </html>
