Added contact form

--- a/index.html
+++ b/index.html
@@ -52,5 +52,36 @@
             <p>Join us as we explore the fascinating world of cats together and celebrate the magic they bring into our lives each and every day. Thank you for being a part of the Cats World community!</p>
         </section>
         <hr>
+        <!-- CONTACT SECTION -->
+        <section id="contact">
+            <h2>Get in touch with us!</h2>
+            <form>
+                <div>
+                    <label for="name">Name:</label>
+                    <input id="name" type="text" placeholder="Ex. Juan Dela Cruz" required>
+                </div>
+
+                <div>
+                    <label for="email">Email:</label>
+                    <input id="email" type="email" placeholder="Ex. name@domain.com" required>
+                </div>
+
+                <div>
+                    <label for="message">Message:</label>
+                    <textarea name="Message" id="message" cols="40" rows="10" required></textarea>
+                </div>
+
+                <div>
+                    <br>
+                    <button type="reset">Reset</button>
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <br>
+        <h4>All rights reserved. ©2024</h4>
+    </footer>
 </body>
 </html>
